Gnumeric 0.99.2

Andreas:
	* Improve file format documentation

Jody:
	* double check that nearest range is not on another sheet.

--------------------------------------------------------------------------
Gnumeric 0.99.1

Andreas:
	* Improve documentation incl. analysis tools, files & worksheet
	* Implement merges and spans in html exporter
	* Make output from HTML4.0 and HTML3.2 exporters validate 
	* Fix copy multiple cells to single merged cell (#67298)
	* Fix expr entry widget: used to fet confised on mouse clicks
          (#65894)

Jody:
	* Add insert Graph menu item & icon
	* Fix Exit icon for bonbo build.
	* Delete the CAPS lock feature from autocorrect.
	* Fix Chema's sneaky cursor grab.
	* Applix import for v4.41, add it to the mime types.
	* Inter-Gnumeric pasting support for merges, and shares.
	* Fix life cycle of validation styles.
	* Undo for pasting a cut was saving too much.
	* Parser was not honouring requests to ensure absoluteness.
	* Transparent makes no sense for lines & arrows.
	* Improve help tokenizer.
	* Don't prompt for sheet delete if it is pristine.
	* Autofill includes autoformats for expressions.
	* Edit position after undoing a merge.
	* Partial fix for del col/row undo with dependent objects.
	* Support some additional forms of #!REF in XL import.
	* Fix importing of graphs with embedded graphs.
	* Improve autofill handling of merges & arrays.
	* Support pasting transposed merges.
	* Ensure that cell sizes never violate absolute minima.
	* Fix format leak (thanks Morten)
	* Fix data validation.
	* Dirty workbook when modifying summary info.
	* Invalidate names refering to deleted expressions.
	* Fix row height resize when undoing changes to JIT rendering.

Morten:
	* Fix DATE.
	* Fix a pile of leaks in financial functions.
	* Fix COUPNCD, YIELD, PRICE.
	* Fix overflow issues.

Wayne Schuller:
	* Search and search-replace history persistence.
	* Improve documentation: intro and printing

Tino Meinen: